--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.6.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-notifications-component": "^3.0.3",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
