--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "axios": "^0.21.1",
+    "fetch": "^1.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-notifications-component": "^3.0.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-notifications-component": "^3.0.3",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
