--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,8 +1,7 @@
 {
-    "extends": ["stylelint-config-standard", "stylelint-config-prettier"],
+    "extends": ["stylelint-config-standard", "stylelint-config-prettier", "stylelint-config-sass-guidelines"],
     "plugins": [
         "stylelint-order",
-        "stylelint-scss",
         "stylelint-selector-bem-pattern"
     ],
     "ignoreFiles": ["**/styles/vendor/**/*.scss"],
