--- a/package.json
+++ b/package.json
@@ -34,15 +34,12 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "npm run -s lint:prettier:check && npm run -s lint:eslint:check && npm run -s lint:stylelint:check",
-    "lint:prettier": "prettier --check",
     "lint:prettier:check": "prettier --check \"src/**/*.{js,jsx,scss,json,css,md}\"",
     "lint:prettier:fix": "prettier --write \"src/**/*.{js,jsx,scss,json,css,md}\"",
-    "lint:eslint": "eslint --max-warnings 0",
-    "lint:eslint:check": "npm run -s lint:eslint \"src/**/*.{js,jsx}\"",
-    "lint:eslint:fix": "npm run -s lint:eslint \"src/**/*.{js,jsx}\" --fix",
-    "lint:stylelint": "stylelint",
-    "lint:stylelint:check": "npm run -s lint:stylelint \"src/**/*.scss\"",
-    "lint:stylelint:fix": "npm run -s lint:stylelint \"src/**/*.scss\" --syntax scss --fix"
+    "lint:eslint:check": "eslint \"src/**/*.{js,jsx}\"",
+    "lint:eslint:fix": "eslint \"src/**/*.{js,jsx}\" --fix",
+    "lint:stylelint:check": "stylelint \"src/**/*.scss\"",
+    "lint:stylelint:fix": "stylelint \"src/**/*.scss\" --syntax scss --fix"
   },
   "eslintConfig": {
     "extends": [
