--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "fetch": "^1.1.0",
+    "immutability-helper": "^3.1.1",
     "react": "^17.0.1",
+    "react-dnd": "^14.0.1",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.1",
     "react-notifications-component": "^3.0.3",
     "react-router": "^5.2.0",
