--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
+    "cross-env": "^7.0.3",
     "fetch": "^1.1.0",
     "immutability-helper": "^3.1.1",
     "react": "^17.0.1",
@@ -32,7 +33,7 @@
     "stylelint-selector-bem-pattern": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": " react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -42,7 +43,8 @@
     "lint:eslint:check": "eslint \"src/**/*.{js,jsx}\"",
     "lint:eslint:fix": "eslint \"src/**/*.{js,jsx}\" --fix",
     "lint:stylelint:check": "stylelint \"src/**/*.scss\"",
-    "lint:stylelint:fix": "stylelint \"src/**/*.scss\" --syntax scss --fix"
+    "lint:stylelint:fix": "stylelint \"src/**/*.scss\" --syntax scss --fix",
+    "dev":"cross-env BROWSER=none react-scripts start"
   },
   "eslintConfig": {
     "extends": [
