--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.1",
     "react-notifications-component": "^3.0.3",
+    "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.2"
@@ -44,7 +45,7 @@
     "lint:eslint:fix": "eslint \"src/**/*.{js,jsx}\" --fix",
     "lint:stylelint:check": "stylelint \"src/**/*.scss\"",
     "lint:stylelint:fix": "stylelint \"src/**/*.scss\" --syntax scss --fix",
-    "dev":"cross-env BROWSER=none react-scripts start"
+    "dev": "cross-env BROWSER=none react-scripts start"
   },
   "eslintConfig": {
     "extends": [
