Final Commit hopefully

--- a/app.yaml
+++ b/app.yaml
@@ -3,17 +3,17 @@ runtime: nodejs14 # or another supported version
 instance_class: F4
 
 env_variables:
-  BUCKET_NAME: "eco-composition-314111"
+    BUCKET_NAME: 'eco-composition-314111'
 
 handlers:
-- url: /issueTracker
-  static_dir: issueTracker
+    - url: /issueTracker
+      static_dir: issueTracker
 
-- url: /.*
-  secure: always
-  redirect_http_response_code: 301
-  script: auto
+    - url: /.*
+      secure: always
+      redirect_http_response_code: 301
+      script: auto
 
 automatic_scaling:
-  min_instances: 2
-  max_instances: 4
+    min_instances: 2
+    max_instances: 4
