--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,11 @@
 {
-  "env": {
-    "browser": true
-  },
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "react-app"
-  ],
-  "plugins": ["react", "prettier"],
-  "rules": {
-    "prettier/prettier": "error",
-    "react/prop-types": "off"
-  }
+    "env": {
+        "browser": true
+    },
+    "extends": ["eslint:recommended", "plugin:react/recommended", "react-app"],
+    "plugins": ["react", "prettier"],
+    "rules": {
+        "prettier/prettier": "error",
+        "react/prop-types": "off"
+    }
 }
