--- a/.github/workflows/main_IssueTrackerKU.yml
+++ b/.github/workflows/main_IssueTrackerKU.yml
@@ -37,7 +37,7 @@ jobs:
     needs: build
     environment:
       name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}/build
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
       - name: Download artifact from build job
