--- a/.github/workflows/main_kuissuetracker.yml
+++ b/.github/workflows/main_kuissuetracker.yml
@@ -24,14 +24,13 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          CI=false npm run-script build --if-present
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: ./build
 
   deploy:
     runs-on: ubuntu-latest
