--- a/.github/workflows/main_kuissuetracker.yml
+++ b/.github/workflows/main_kuissuetracker.yml
@@ -24,7 +24,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          CI=false npm run-script build --if-present
+          npm run-script build --if-present
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
